<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <cn.studyjams.s1.sj50.yanglong.view.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:onClick="openUserInfoView"
            android:src="@drawable/head"
            app:border_color="#FFffffff"
            app:border_width="1dp" />

        <TextView
            style="@style/user_edit_margin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_name" />

        <EditText
            style="@style/user_edit_margin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/user_edit_tip"/>
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:columnCount="2"
        android:rowCount="7">

        <TextView
            style="@style/grid_user_info"
            android:text="@string/user_birthday" />

        <EditText
            style="@style/grid_user_info"
            android:hint="@string/user_edit_tip" />

        <TextView
            style="@style/grid_user_info"
            android:text="@string/user_company" />

        <EditText
            style="@style/grid_user_info"
            android:hint="@string/user_edit_tip" />

        <TextView
            style="@style/grid_user_info"
            android:text="@string/user_position" />

        <EditText
            style="@style/grid_user_info"
            android:hint="@string/user_edit_tip" />

        <TextView
            style="@style/grid_user_info"
            android:text="@string/user_mobile" />

        <EditText
            style="@style/grid_user_info"
            android:hint="@string/user_edit_tip" />

        <TextView
            style="@style/grid_user_info"
            android:text="@string/user_address" />

        <EditText
            style="@style/grid_user_info"
            android:hint="@string/user_edit_tip" />

        <TextView
            style="@style/grid_user_info"
            android:layout_rowSpan="2"
            android:text="@string/user_introduction" />

        <EditText
            style="@style/grid_user_info"
            android:layout_rowSpan="2"
            android:hint="@string/user_edit_tip" />
    </GridLayout>
</LinearLayout>